fix: changed dark mode behaviour

--- a/src/components/common/navbar/Navbar.module.scss
+++ b/src/components/common/navbar/Navbar.module.scss
@@ -1,18 +1,28 @@
 .navbar{
-  background-color: rgb(25 118 210);
+  transition: var(--transition);
+  background-color: var(--navbar-color);
 
   .navbar-container{
     display: flex;
     justify-content: space-between;
+    padding: 10px 20px 0;
 
     .title{
-      font-size: 22px;
+      font-size: 18px;
       font-weight: 400;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 3px;
     }
 
     .subtitle{
       font-size: 14px;
       font-weight: 200;
+    }
+
+    .dark-theme{
+      font-size: 11px;
     }
   }
 }
