--- a/src/components/pages/course-page/CoursePage.module.scss
+++ b/src/components/pages/course-page/CoursePage.module.scss
@@ -8,7 +8,13 @@
 }
 
 .alert{
- margin: 5px;
+  margin: 5px;
+  background-color: var(--alert-color);
+  color: var(--primary-text-color);
+
+  svg{
+    color: var(--primary-text-color);
+  }
 }
 
 .card-course-container{
@@ -29,6 +35,7 @@
   display: flex;
   flex-direction: column;
   padding: 12px;
+  color: var(--primary-text-color);
   
   p{
     font-weight: 700;
@@ -58,16 +65,5 @@
 
   .alert{
     font-size: 12px;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .list-content-title{
-    color: #E5E5E5;
-  }
-
-  .alert{
-    background-color: #01579b;
-    color: #E5E5E5;
   }
 }
